# strgpt

./: .gitignore  CMakeLists.txt  Makefile
config/: shakespeare_char.json
src/: bpe.cc  bpe.h  bpe_test.cc  gradscaler.h  main.cc  mapped_file.h  model.cc  model.h  train.cc  train.h
src/command/: command.h  dataset.cc  sample.cc  train.cc
src/model/: gradscaler.h  mapped_file.h  model.cc  model.h  train.cc  train.h
src/tokenizer/: bpe.cc  bpe.h  bpe_test.cc  char.cc  char.h  char_test.cc  tokenizer.h
